tests/semantic_errors/testcase19.c
// invalid casting int -> int

int main(void){
    int x;
    x = (int) x;
}